charts/all/test-app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: test-app
  name: test-app
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 5001
  selector:
    app: test-app
    deploymentconfig: test-app
  sessionAffinity: None
  type: ClusterIP
