charts/all/test-app/templates/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: test-app
  name: test-app
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: test-app
    weight: 100
  wildcardPolicy: None
